--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -23,18 +23,15 @@
 }
 
 
-.navbar li a {
+.navbar li p {
     border: none;
     padding-right: 10px;
     padding-left: 10px;
+    margin-top: 10px;
     color:  var(--lemonade);
     font-size: 20px;
     font-weight: bold;
     font-family: var(--Rubik);
-}
-
-.navbar li a:hover{
-    color: whitesmoke;
 }
 
  i {
@@ -46,10 +43,4 @@ i:hover {
 }
 
 
-@media screen and (min-width: 480px) {
-    .navbar li a {
-        display: flex;
-        justify-content: center;
-    }
-  }
 
